Fix <tfoot> font size in Safari on iOS

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -286,9 +286,12 @@ tfoot tr {
   background-color: var(--color-body-background);
 }
 
+tfoot {
+  font-size: inherit;
+}
+
 tfoot td {
   border: none;
-  font-size: var(--font-size-table);
   text-align: right;
 }
 
